--- a/Fullstack/html-boilerplate/index.html
+++ b/Fullstack/html-boilerplate/index.html
@@ -8,6 +8,17 @@
         <h1>
             Lorem Ipsum
         </h1>
+        <ol>
+            <li>
+                item1
+            </li>
+            <li>
+                item2
+            </li>
+            <li>
+                item3
+            </li>
+        </ol>
         <p>
             <em><strong>
                 Lorem Ipsum
